ager section thik hoisa

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;600;700;800&display=swap"   rel="stylesheet">
     <link rel="stylesheet" href="assets/css/all.min.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div class="header-top-section">
+<div class="header-top-section ">
     <div class="container">
         <div class="h-t-wrapper">
             <div class="h-t-logo">
@@ -68,16 +69,46 @@
 
 <!-- hero section -->
 
-<div class="hero-section">
-    <div class="container">
-        <div class="h-card-text">
-            <h1>ঢাকা মেডিকেল কলেজ</h1>
-            <p>ঢাকা শাখা</p>
+<div class="hero-slider owl-carousel">
+    <div class="hero-section">
+        <div class="container">
+            <div class="h-card-text">
+                <h1>ঢাকা মেডিকেল কলেজ</h1>
+                <p>ঢাকা শাখা</p>
+            </div>
         </div>
+        <img class="hero-img" src="assets/img/banner-02.jpg" alt="">
     </div>
-    <img class="hero-img" src="assets/img/banner-02.jpg" alt="">
+    <div class="hero-section">
+        <div class="container">
+            <div class="h-card-text">
+                <h1>ঢাকা মেডিকেল কলেজ</h1>
+                <p>ঢাকা শাখা</p>
+            </div>
+        </div>
+        <img class="hero-img" src="assets/img/banner-02.jpg" alt="">
+    </div>
+    <div class="hero-section">
+        <div class="container">
+            <div class="h-card-text">
+                <h1>ঢাকা মেডিকেল কলেজ</h1>
+                <p>ঢাকা শাখা</p>
+            </div>
+        </div>
+        <img class="hero-img" src="assets/img/banner-02.jpg" alt="">
+    </div>
+    <div class="hero-section">
+        <div class="container">
+            <div class="h-card-text">
+                <h1>ঢাকা মেডিকেল কলেজ</h1>
+                <p>ঢাকা শাখা</p>
+            </div>
+        </div>
+        <img class="hero-img" src="assets/img/banner-02.jpg" alt="">
+    </div>
 </div>
 
+<!-- program section -->
 <div class="program-section">
     <div class="container">
         <div class="p-title">
@@ -110,7 +141,7 @@
                         </ul>
                         <div class="program-button  ">
                             <div >
-                                <a class="bbtn bbtn-none" href="">Details & Routine</a>
+                                <a class="bbtn bbtn-none" href="program.html">Details & Routine</a>
                             </div>
                             <div >
                                 <a class="bbtn bbtn-black" href="">Enroll Now</a>
@@ -549,6 +580,16 @@
     </div>
 </div>
 
+<!-- copy right section -->
+
+<div class="copy-right">
+    <div class="container">
+        <div class="copy-card">
+            <p>Copyright © Medico Academic & Admission Care. All rights reserved. 2023</p>
+        </div>
+    </div>
+</div>
+
 
 
 
@@ -564,5 +605,8 @@
 
     <script src="assets/js/jquery-3.6.3.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/owl.carousel.min.js"></script>
+    <script src="assets/js/main.js"></script>
+
 </body>
 </html>
