added two new page

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
 <div class="header-top-section ">
     <div class="container">
         <div class="h-t-wrapper">
-            <div class="h-t-logo">
-                <img src="assets/img/Group 13814.svg" alt="">
-            </div>
+            <a href="">
+                <div class="h-t-logo">
+                    <img src="assets/img/Group 13814.svg" alt="">
+                </div>
+            </a>
             <div class="h-t-icon">
                 <a href="">
                     <i class="fa-brands fa-facebook-f"></i>
@@ -59,7 +61,7 @@
                     <a href="">হোম</a>
                     <a href="">Founder & CEO মেসেজ</a>
                     <a href="">প্রোগ্রামসমূহ</a>
-                    <a href="">শাখাসমূহ</a>
+                    <a href="branch-list.html">শাখাসমূহ</a>
                     <a href="">আমাদের নিয়ে কিছু কথা</a>
                 </li>
             </ul>
@@ -259,9 +261,9 @@
                     <div class="searvice-card-inner">
                         <img src="assets/img/pdf.svg" alt="">
                         <h4>ছাত্র ছাত্রীদের জন্য কিছু দাগানো নমুনা</h4>
-                    <div class="none" >
-                        <a class="bbtn pdf btn-one " href="">Admission</a>
-                    </div>
+                        <div class="none" >
+                            <a class="bbtn pdf btn-one " href="">Admission</a>
+                        </div>
                     </div>
                 </div>
             </div>
