--- a/single-block-page.html
+++ b/single-block-page.html
@@ -85,10 +85,11 @@
 </div>
 <!-- block hero-section -->
 <div class="black-hero-wrapper">
-    <div class="block-hero">
-        <img src="assets/img/color_04.png" alt="">
-    </div>
-            
+    <div class="container">
+        <div class="block-hero">
+            <img src="assets/img/color_04.png" alt="">
+        </div>
+    </div>         
 </div>
 <!-- details-section -->
 
