--- a/branch-list.html
+++ b/branch-list.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="assets/css/all.min.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="assets/css/lightbox.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -145,34 +146,34 @@
         </div>
         <div class="row">
             <div class="col-md-6 col-lg-4">
-                <div class="photo-card">
+                <a href="assets//img/bike.jpg" data-lightbox="bonee" class="photo-card">
                     <img src="assets/img/bike.jpg" alt="">
-                </div>
+                </a>
             </div>
             <div class="col-md-6 col-lg-4">
-                <div class="photo-card">
-                    <img src="assets/img/bike.jpg" alt="">
-                </div>
+                <a href="assets//img/4.jpg" data-lightbox="bonee" class="photo-card">
+                    <img src="assets/img/4.jpg" alt="">
+                </a>
             </div>
             <div class="col-md-6 col-lg-4">
-                <div class="photo-card">
-                    <img src="assets/img/bike.jpg" alt="">
-                </div>
+                <a href="assets//img/5.jpg" data-lightbox="bonee" class="photo-card">
+                    <img src="assets/img/5.jpg" alt="">
+                </a>
             </div>
             <div class="col-md-6 col-lg-4">
-                <div class="photo-card">
-                    <img src="assets/img/bike.jpg" alt="">
-                </div>
+                <a href="assets//img/6.jpg" data-lightbox="bonee" class="photo-card">
+                    <img src="assets/img/6.jpg" alt="">
+                </a>
             </div>
             <div class="col-md-6 col-lg-4">
-                <div class="photo-card">
-                    <img src="assets/img/bike.jpg" alt="">
-                </div>
+                <a href="assets//img/7.jpg" data-lightbox="bonee" class="photo-card">
+                    <img src="assets/img/7.jpg" alt="">
+                </a>
             </div>
             <div class="col-md-6 col-lg-4">
-                <div class="photo-card">
+                <a href="assets//img/bike.jpg" data-lightbox="bonee" class="photo-card">
                     <img src="assets/img/bike.jpg" alt="">
-                </div>
+                </a>
             </div>
         </div>
         <div class="text-center" >
@@ -254,6 +255,7 @@
     <script src="assets/js/jquery-3.6.3.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/owl.carousel.min.js"></script>
+    <script src="assets/js/lightbox.min.js"></script>
     <script src="assets/js/main.js"></script>
 
 </body>
