--- a/program.html
+++ b/program.html
@@ -82,7 +82,6 @@
                         <h2>মেডিকেল + ভার্সিটি Math কোর্স 2023</h2>
                         <p>শব্দ গুলো দেখে সকলেই অবাক হয়েছে, ভাবছেন, এ সব শব্দের  নিজে থেকে বানানো। তবে সত্যটা হলো, এর একটাও বানানো নয়। শব্দ গুলো দেখে সকলেই অবাক হয়েছে, এটা বলা বাহুল্য। যাদের মূল টার্গেট তাদের  কোর্স’ সম্পূর্ণ ফ্রি! এছাড়া এখন এই এডমিশন প্রোগ্রামে ভর্তি হলে ‘HSC বোর্ড রিভিশন ও প্রি-এডমিশন’ কোর্স ফ্রি-তে থাকছেই!</p>
                         <div class="p-input-wrapper">
-
                             <label class="p-input">
                                 <input type="radio" name="course">
                                 <span>Regular Course</span>
@@ -178,10 +177,8 @@
                                 <div class="additional-wrapper">
                                     <div class="additional-card">
                                         <img src="assets/img/addintional-photo.png" alt="">
-                                        <div class="none nantu" >
-                                            <a class="button-56" href="" data-bs-target="#mahin" data-bs-toggle="modal">
-                                                BooK
-                                            </a>
+                                        <div class="none" >
+                                            <a class="bbtn pdf btn-one " href=""data-bs-target="#mahin"data-bs-toggle="modal">Admission</a>
                                         </div>
                                     </div>
                                 </div>
@@ -400,7 +397,8 @@
     <div class="modal-dialog modal-dialog-scrollable modal-fullscreen">
         <div class="modal-content">
             <div class="modal-header">
-                <button data-bs-dismiss="modal">&times;</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"><i class="fa-solid fa-xmark"></i></button>
+                
             </div>
             <div class="modal-body">
                 <embed src="assets/nuzhatul-kari.pdf" type="application/pdf">
