--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 
         </div>
         <div class="row">
-            <div class="col-lg-3 col-sm-6">
+            <div class="col-lg-3 col-md-6">
                 <div class="p-card-wrapper">
                     <img src="assets/img/program-card.png" alt="">
                     <div class="p-text">
@@ -152,7 +152,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-sm-6">
+            <div class="col-lg-3 col-md-6">
                 <div class="p-card-wrapper">
                     <img src="assets/img/program-card.png" alt="">
                     <div class="p-text">
@@ -176,7 +176,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-sm-6">
+            <div class="col-lg-3 col-md-6">
                 <div class="p-card-wrapper">
                     <img src="assets/img/program-card.png" alt="">
                     <div class="p-text">
@@ -200,7 +200,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-sm-6">
+            <div class="col-lg-3 col-md-6">
                 <div class="p-card-wrapper">
                     <img src="assets/img/program-card.png" alt="">
                     <div class="p-text">
@@ -245,7 +245,7 @@
                 </svg>
                 
         </div>
-        <div class="row">
+        <div class="row justifi">
             <div class="col-lg-3 col-md-6">
                 <div class="searvice-card">
                     <ul>
@@ -428,7 +428,7 @@
 <div class="enrollment-section">
     <div class="container">
         <div class="enrollment-full-care">
-            <div class="row">
+            <div class="row align-items-center">
                 <div class="col-md-6 col-sm-12">
                     <img src="assets/img/exam.png" alt="">
                 </div>
