--- a/success.html
+++ b/success.html
@@ -106,7 +106,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-sm-6">
                     <div class="success-card">
                         <div class="sc-img">
                             <img src="assets/img/FB_IMG_1665120306671.jpg" alt="">
@@ -126,7 +126,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4">
+                <div class="col-md-6 col-sm-6 col-lg-4">
                     <div class="success-card">
                         <div class="sc-img">
                             <img src="assets/img/FB_IMG_1665120306671.jpg" alt="">
@@ -146,7 +146,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4">
+                <div class="col-md-6 col-sm-6 col-lg-4">
                     <div class="success-card">
                         <div class="sc-img">
                             <img src="assets/img/FB_IMG_1665120306671.jpg" alt="">
@@ -166,7 +166,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4">
+                <div class="col-md-6 col-sm-6 col-lg-4">
                     <div class="success-card">
                         <div class="sc-img">
                             <img src="assets/img/FB_IMG_1665120306671.jpg" alt="">
@@ -186,7 +186,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4">
+                <div class="col-md-6 col-sm-6 col-lg-4">
                     <div class="success-card">
                         <div class="sc-img">
                             <img src="assets/img/FB_IMG_1665120306671.jpg" alt="">
@@ -206,7 +206,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4">
+                <div class="col-md-6 col-sm-6 col-lg-4">
                     <div class="success-card">
                         <div class="sc-img">
                             <img src="assets/img/FB_IMG_1665120306671.jpg" alt="">
