--- a/program.html
+++ b/program.html
@@ -57,9 +57,9 @@
         <div class="header-menu ">
             <ul class="text-center">
                 <li >
-                    <a href="">হোম</a>
-                    <a href="">Founder & CEO মেসেজ</a>
-                    <a href="">প্রোগ্রামসমূহ</a>
+                    <a href="index.html">হোম</a>
+                    <a href="Founder & CEO মেসেজ.html">Founder & CEO মেসেজ</a>
+                    <a href="program.html">প্রোগ্রামসমূহ</a>
                     <a href="branch-list.html">শাখাসমূহ</a>
                     <a href="">আমাদের নিয়ে কিছু কথা</a>
                 </li>
@@ -396,16 +396,10 @@
 <div class="modal" id="mahin">
     <div class="modal-dialog modal-dialog-scrollable modal-fullscreen">
         <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"><i class="fa-solid fa-xmark"></i></button>
-                
-            </div>
             <div class="modal-body">
+                
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"><i class="fa-solid fa-xmark"></i></button>
                 <embed src="assets/nuzhatul-kari.pdf" type="application/pdf">
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
             </div>
         </div>
     </div>
