--- a/single-page.html
+++ b/single-page.html
@@ -57,9 +57,9 @@
         <div class="header-menu ">
             <ul class="text-center">
                 <li >
-                    <a href="">হোম</a>
-                    <a href="">Founder & CEO মেসেজ</a>
-                    <a href="">প্রোগ্রামসমূহ</a>
+                    <a href="index.html">হোম</a>
+                    <a href="Founder & CEO মেসেজ.html">Founder & CEO মেসেজ</a>
+                    <a href="program.html">প্রোগ্রামসমূহ</a>
                     <a href="branch-list.html">শাখাসমূহ</a>
                     <a href="">আমাদের নিয়ে কিছু কথা</a>
                 </li>
